# QCxMS2

./: .gitignore
qcxms_py/: README.md  pyproject.toml  test_imports.py
qcxms_py/.github/workflows/: python-build.yml
qcxms_py/src/qcxms/: __init__.py  argparser.py  boxmuller.py  charges.py  cid.py  constants.py  data.py  fragmentation.py  iee.py  iomod.py  isotopes.py  main.py  mcsimu.py  plot.py  plotting.py  qmmod.py  reaction.py  rmsd.py  structools.py  tsmod.py  utility.py
qcxms_py/tests/: test_mcsimu.py  test_tsmod.py
